--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
   "name": "cloze-node",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "main.js",
   "license": "MIT",
   "dependencies": {
     "node-xlsx": "^0.15.0",
     "xlsx": "^0.15.3"
+  },
+  "scripts": {
+    "start": "electron ."
+  },
+  "devDependencies": {
+    "electron": "^7.1.10"
   }
 }
